ticket-reservation-app/src/app/cinema/components/single-screening/single-screening.component.scss
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Russo+One&display=swap');

body {
  font-family: "Quicksand", sans-serif;
}
.form-choice {
  padding-top: 13px;
}

h1 {
  font-family: "Bebas Neue", sans-serif;
}

h2 {
  //padding-top: 10px;
  //margin-bottom: -15px;
}

.container {
  /*border: 5px solid;*/
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 10px;
  text-align: center;

  .auditorium {
    margin-left: 37%;
  }

  ol {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  .row {
  }

  .seats {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
  }

  .seat {
    display: flex;
    flex: 0 0 14.28571428571429%;
    padding: 5px;
    position: relative;

    &:nth-child(3) {
      margin-right: 14.28571428571429%;
    }
  }

  label {
    display: block;
    position: relative;
    width: 100%;
    text-align: center;
    font-size: 14px;
    font-weight: bold;
    line-height: 1.5rem;
    padding: 4px 0;
    background: #BADA55;
    border-radius: 5px;
    animation-duration: 300ms;
    animation-fill-mode: both;

    &:before {
      content: "";
      position: absolute;
      width: 75%;
      height: 75%;
      top: 1px;
      left: 50%;
      transform: translate(-50%, 0%);
      background: rgba(255, 255, 255, .4);
      border-radius: 3px;
    }

    &:hover {
      cursor: pointer;
      box-shadow: 0 0 0px 2px #5C6AFF;
    }
  }

  input[type=checkbox] {
    position: absolute;
    opacity: 0;
  }

  input[type=checkbox]:checked {
    + label {
      background: #ff9f2c;
      -webkit-animation-name: rubberBand;
      animation-name: rubberBand;
      animation-duration: 300ms;
      animation-fill-mode: both;
    }
  }

  input[type=checkbox]:disabled {
    + label {
      background: #f42536;
      text-indent: -9999px;
      overflow: hidden;

      &:after {
        content: "X";
        text-indent: 0;
        position: absolute;
        top: 4px;
        left: 50%;
        transform: translate(-50%, 0%);
      }

      &:hover {
        box-shadow: none;
        cursor: not-allowed;
      }
    }
  }
}

button {
  margin-bottom: 15px;
  font-size: 18px;
  color: #000000;
  font-family: inherit;
  font-weight: normal;
  cursor: pointer;
  position: relative;
  border: none;
  background: none;
  text-transform: uppercase;
  transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
  transition-duration: 400ms;
  transition-property: color;

  &:focus,
  &:hover {
    color: #464646;
  }

  &:focus:after,
  &:hover:after {
    width: 100%;
    left: 0%;
  }

  &:after {
    content: "";
    pointer-events: none;
    bottom: -2px;
    left: 50%;
    position: absolute;
    width: 0%;
    height: 2px;
    background-color: #464646;
    transition-timing-function: cubic-bezier(0.25, 0.8, 0.25, 1);
    transition-duration: 400ms;
    transition-property: width, left;
  }
}

.inputGroup {
  margin-top: 5px;
  margin-bottom: 5px;
  font-family: 'Segoe UI', sans-serif;
  /*margin: 1em 0 1em 0;*/
  max-width: 270px;
  /*position: relative;*/
  margin-left: 40%;

  input {
    font-size: 100%;
    padding: 0.8em;
    outline: none;
    border: 2px solid rgb(200, 200, 200);
    background-color: transparent;
    border-radius: 20px;
    width: 100%;
  }
  .personal-details {
    padding-top: 5px;
  }
}

